styles.css
#chorus {
    user-select: none;
    border-width: 0 !important;
    border-style: solid !important;
    border-color: #e5e7eb;
}

.chorus-common {
    display: flex;
    flex-wrap: nowrap;
    justify-content: space-between;
    align-items: center;
    height: 20px;
}

.chorus-header {
    color: #f0f0f0;
    font-weight: 600;
    line-height: 1;
}

#chorus-main {
    border: 1px solid #282828;
    border-right: 0;
    bottom: 90px;
    right: 0;
    position: absolute;
}

#chorus-icon {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    width: 2rem;
    height: 2rem;
}

#chorus-snip-controls {
    border: 1px dashed #1ed760;
}

#chorus-snip-controls,
#chorus-speed-controls {
    position: fixed;
    left: 80px;
    bottom: 80px;
    padding: .5rem .75rem;
    background-color: #171717;
    width: 320px;
}

#chorus-settings {
    width: 240px;
    padding: .5rem .75rem;
    background-color: #171717;
}

#chorus-settings input {
    margin-left: .5rem;
    width: 56px;
    border-radius: .125rem;
    padding-left: .125rem;
    padding-right: .125rem;
    text-align: center;
    font-size: .875rem
}

.chorus-text-button:hover {
    background-color: #9B9B9B;
    cursor: pointer;
}

#chorus button:hover {
    cursor: pointer;
}

#chorus button,
#chorus input {
    border-width: 0 !important;
    border-style: solid !important;
    border-color: #e5e7eb;
}

#chorus-close-button,
#chorus-close-button:hover {
    padding: 0;
    font-size: 1rem;
    border: none !important;
    background-color: unset;
}

#chorus button:disabled {
    cursor: not-allowed;
}

.chorus-icon-active,
.chorus-icon-active:hover {
    color: #2edb64;
}

.chorus-hover-white:hover {
    color: #fff;
}

.chorus-text-button {
    background-color: #535353;
    color: white;
    font-weight: 600;
    font-size: .75rem;
    padding: .125rem .25rem;
    border-radius: .125rem
}

.slider-container {
    position: relative;
    width: 100%;
    margin: 0 8px;
}

.slider {
    position: relative;
    z-index: 1;
    height: 6px;
}

.slider>.track {
    position: absolute;
    z-index: 1;
    left: 0;
    right: 0;
    top: 0;
    bottom: 0;
    border-radius: 5px;
    background-color: #494949;
}

.slider>.range {
    position: absolute;
    z-index: 2;
    left: 25%;
    right: 25%;
    top: 0;
    bottom: 0;
    border-radius: 5px;
    background-color: #fff;
}

.slider-container:hover .slider>.range {
    background-color: #1ed760;
}

.slider>.thumb {
    position: absolute;
    z-index: 3;
    width: 12px;
    height: 12px;
    border-radius: 50%;
    background-color: #fff;
    box-shadow: 0 0 0 0 rgba(98, 0, 238, .1);
    transition: box-shadow .3s ease-in-out;
}

.slider>.thumb.left {
    left: 25%;
    transform: translate(-6px, -3px);
    display: none;
}

.slider>.thumb.right {
    right: 25%;
    transform: translate(6px, -3px);
    display: none;
}

.slider-container:hover .slider>.thumb.left,
.slider-container:hover .slider>.thumb.right,
.slider-container:active .slider>.thumb.left,
.slider-container:active .slider>.thumb.right {
    display: block;
}

.input[type="range"] {
    position: absolute;
    pointer-events: none;
    -webkit-appearance: none;
    appearance: none;
    z-index: 2;
    margin: 0;
    height: 6px;
    width: 100%;
    opacity: 0;
}

.input[type="range"]::-webkit-slider-thumb {
    pointer-events: all;
    background-color: #fff;
    width: 12px;
    height: 12px;
    border-radius: 50%;
}

.slider>.thumb.hover {
    box-shadow: 0 0 0 6px #28e269;
}

.slider>.thumb.active {
    box-shadow: 0 0 0 6px #28e269;
}

.time {
    display: flex;
    align-items: center;
    box-sizing: border-box;
    -webkit-tap-highlight-color: transparent;
    margin-block: 0px;
    font-size: 0.6875rem;
    width: fit-content;
    min-width: 30px;
    font-weight: 400;
    color: #b3b3b3;
}

.snippy {
    display: flex;
    margin: 12px 0;
    justify-content: space-evenly;
    align-items: center;
}

.end {
    justify-content: flex-end;
}

[rolw=skip][aria-label],
[role=snip][aria-label] {
    position: relative;
    display: inline-block;
}

[role=skip][aria-label]:after,
[role=snip][aria-label]:after {
    content: attr(aria-label);
    display: none;
    position: absolute;
    top: -1.5rem;
    z-index: 99999;
    transform: translate3d(-2.25rem, -0.75rem, 10rem);
    pointer-events: none;
    padding: 8px 10px;
    line-height: 15px;
    white-space: nowrap;
    text-decoration: none;
    text-indent: 0;
    overflow: visible;
    font-size: .9rem;
    font-weight: normal;
    color: #ffffffe6;
    background-color: #282828;
    border-radius: 2px;
    box-shadow: 1px 2px 6px rgba(0, 0, 0, 0.3);
}

[role=skip][aria-label]:hover:after,
[role=snip][aria-label]:hover:after {
    display: inline-block;
}

